Emulation fixes:
 - GB Video: Clear VRAM on reset (fixes mgba.io/i/2152)
 - GBA SIO: Add missing NORMAL8 implementation bits (fixes mgba.io/i/2172)
 - GBA Video: Revert scanline latching changes (fixes mgba.io/i/2153, mgba.io/i/2149)
Other fixes:
 - 3DS: Fix disabling "wide" mode on 2DS (fixes mgba.io/i/2167)
 - Core: Fix memory leak in opening games from the library
 - GB Core: Fix GBC colors setting breaking default model overrides (fixes mgba.io/i/2161)
 - GBA: Fix out of bounds ROM accesses on patched ROMs smaller than 32 MiB
 - Qt: Fix infrequent deadlock when using sync to video
 - Qt: Fix applying savetype-only overrides
 - Qt: Fix crash in sprite view for partially out-of-bounds sprites (fixes mgba.io/i/2165)
 - Util: Fix loading UPS patches that affect the last byte of the file
Misc:
 - Core: Suspend runloop when a core crashes
 - Qt: Rearrange menus some
 - Util: Improve speed of UPS patch loading

0.9.1: (2021-04-18)
Emulation fixes:
 - ARM: Fix LDM^ with empty rlist (fixes mgba.io/i/2127)
 - Core: Fix first event scheduling after loading savestate
 - GB Serialize: Fix switching speed modes when loading a state (fixes mgba.io/i/2097)
 - GB: Fix skipping BIOS
 - GBA Memory: Fix loading Thumb savestates when in ARM mode
 - GBA Video: Fix window start on modes 3-5 with mosaic (fixes mgba.io/i/1690)
 - GBA Video: Fix mode 3-5 overflow with mosaic (fixes mgba.io/i/1691)
Other fixes:
 - GBA: Fix non-USA 1.0 FireRed misdetecting as a ROM hack (fixes mgba.io/i/2100)
 - GBA: Fix crash when ROM loading fails
 - GBA e-Reader: Fix bitmap short strip scanning
 - GBA Video: Fix mode 5 frame 1 caching (fixes mgba.io/i/2075)
 - GBA Video: Don't attempt to copy invalid registers when switching renderer
 - Qt: Fix crash when switching from high-resolution OpenGL renderer to software
 - Qt: Fix OpenGL renderer lagging behind when fast-forwarding (fixes mgba.io/i/2094)
 - Qt: Fix smudged window icon on Windows