@@ -12,6 +12,7 @@ Emulation fixes:
 Other fixes:
  - 3DS: Fix disabling "wide" mode on 2DS (fixes mgba.io/i/2167)
  - Core: Fix memory leak in opening games from the library
+ - Core: Fix memory searches for relative values (fixes mgba.io/i/2135)
  - GB Core: Fix GBC colors setting breaking default model overrides (fixes mgba.io/i/2161)
  - GBA: Fix out of bounds ROM accesses on patched ROMs smaller than 32 MiB
  - Qt: Fix infrequent deadlock when using sync to video
